--- a/style.css
+++ b/style.css
@@ -1,17 +1,1 @@
-
-  {
-    background-color: black;
-    font-family: monospace;
-    color: green;
-  }
-  #orange-text {
-    color: orange;
-  }
-  .pink-text {
-    color: pink;
-  }
-  .blue-text {
-    color: blue;
-  }
-
-<h1 id="orange-text" class="pink-text blue-text">Penguin University!</h1>
+<h1 style ="color: Blue;">
