--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
-img{
-    max-width: 100%;
-    height: auto;
+p {
+  background-image: url('images/logo.png');
 }
 div.container {
     width: 100%;
