--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
-
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+h1 {
+    font-family: Lobster;
+    color: grey;
+  }
 div.container {
     width: 100%;
     border: 1px solid red;
