--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,7 @@
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-h1 {
-    font-family: Lobster;
-    color: gray;
-  }
-h2 {
-    font-family: monospace;
-    color: gray;
-  }
+.form {
+    width: 200px;
+    height: 30px;
+   }
 div.container {
     width: 100%;
     border: 1px solid red;
