--- a/styles/style.css
+++ b/styles/style.css
@@ -53,8 +53,11 @@ div.container {
     background: url(../images/hospitality1.png);
     }
    }
-h2 {
-    font-family: monospace;
-    color: solid gray;
-   }
-    
+.heart {
+    background-color: white;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    animation-iteration-count: infinite;
+  }
+
