--- a/styles/style.css
+++ b/styles/style.css
@@ -60,4 +60,10 @@ div.container {
     border-radius: 50%;
     animation-iteration-count: infinite;
   }
+@keyframes heart {
+    20% {
+      transform: scale(0.5);
+      opacity: 0.5;
+    }
+  }
 
